fix: page break causing horizontal overflow

--- a/src/components/editor/_editor.scss
+++ b/src/components/editor/_editor.scss
@@ -156,7 +156,7 @@ code > * {
 }
 
 .editor-heading-h1 {
-  font-size: 24px;
+  font-size: 2em;
   color: var(--text-primary);
   font-weight: 600;
   margin: 0;
@@ -166,13 +166,22 @@ code > * {
 }
 
 .editor-heading-h2 {
-  font-size: 15px;
-  color: rgb(101, 103, 107);
-  font-weight: 700;
+  font-size: 1.5em;
+  color: var(--text-primary);
+  font-weight: 500;
   margin: 0;
   margin-top: 10px;
   padding: 0;
-  text-transform: uppercase;
+  transition: $ease-out-200;
+}
+
+.editor-heading-h3 {
+  font-size: 1em;
+  color: var(--text-primary);
+  font-weight: 500;
+  margin: 0;
+  margin-top: 10px;
+  padding: 0;
   transition: $ease-out-200;
 }
 
